--- a/src/main/resources/templates/employees/employee.html
+++ b/src/main/resources/templates/employees/employee.html
@@ -208,8 +208,8 @@
 									</th:block>
 								</div>
 							</div>
-							<hr>
-							<div class="row">
+							<hr sec:authorize="hasAuthority('VIEW_EMPLOYEE_ATTENDANCE')">
+							<div class="row" sec:authorize="hasAuthority('VIEW_EMPLOYEE_ATTENDANCE')">
 								<div class="col-sm-3">
 									<h6 class="mb-0">Attendance</h6>
 								</div>
